samples/_failures_safe/1761374839_fc0422_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c39beb02.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c39beb02.c:190:9: error: expected ‘;’ at end of input
  190 |     free
      |         ^
      |         ;
./samples/SAFE/__tmp_c39beb02.c:190:5: error: expected declaration or statement at end of input
  190 |     free
      |     ^~~~
